--- a/server/pom.xml
+++ b/server/pom.xml
@@ -49,6 +49,12 @@
 			<version>2.3.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.mindrot</groupId>
+			<artifactId>jbcrypt</artifactId>
+			<version>0.4</version>
+		</dependency>
+
 
 	</dependencies>
 
