continued modifying vercel.json to ensure correct deployment

--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,9 +1,12 @@
 {
-    "version":2,
-    "builds": [
-    { "src": "*.js", "use": "@vercel/node" }
+   "version": 2,
+  "builds": [
+    {
+      "src": "dist/TomeTake/**",
+      "use": "@vercel/static"
+    }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "/" }
+    { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
