--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,5 +1,6 @@
 {
   "rewrites": [
-    { "source": "/(.*)", "dest": "/index.html" }
+    { "source": "/(.*)", 
+    "destination": "/index.html" }
   ]
 }
